Created color variable

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header class="homeHeader">
         <div class="homeHeader-top">
             <h1 class="title">How To</h1>
-            <a href="#" class="btn btn-rounded">Sign In</a>
+            <div>
+                <a href="#" class="btn btn-rounded">Sign In</a>
+            </div>
         </div>
     </header>
-</body>
-
-</html>
+</body></html>
