Added menu button and mission statement

--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="homeHeader">
         <div class="homeHeader-top">
+            <i class="fab fa-elementor" id="menu"></i>
             <h1 class="title">How To</h1>
             <div>
                 <a href="#" class="btn btn-rounded">Sign In</a>
             </div>
+        </div>
+        <div class="homeHeader-middle">
+            We're trying to help everyone on the planet
+            learn how to do anything. Join us.
         </div>
     </header>
 </body></html>
