Added learn more button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             </div>
         </div>
         <div class="homeHeader-middle">
-            We're trying to help everyone on the planet
-            learn how to do anything. Join us.
+            By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
         </div>
+        <div class="homeHeader-bottom">
+            <img src="images/book.png" alt="Learn More" id="learnMore">
+        </div>
+
     </header>
 </body></html>
