--- a/about.html
+++ b/about.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <div class="header"><h1 class="aboutT">About</h1><img src="images/logo.png" alt="How To Logo"></div>
+
+    <div class="header">
+        <h1 class="aboutT">About</h1><img src="images/logo.png" alt="How To Logo">
+    </div>
     <main class="container">
         <div class="marketing">
             <h2>Marketing</h2>
