--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,4 +28,5 @@
         </div>
 
     </header>
+    <script src="index.js"></script>
 </body></html>
