Added logo and added create section

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header class="homeHeader">
         <div class="homeHeader-top">
             <i class="fab fa-elementor" id="menu"></i>
-            <h1 class="title">How To</h1>
+            <img src="images/logo.png" alt="Logo" class="homeLogo">
             <div>
                 <a href="#" class="btn btn-rounded">Sign In</a>
             </div>
@@ -28,46 +29,16 @@
         </div>
     </header>
     <main class="mainContent">
-        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur perspiciatis dicta suscipit doloremque, beatae quae. Provident, deleniti perferendis. Veniam ullam dolorum illo, eligendi quidem consequuntur alias repellat. Laudantium, quam, molestiae.</span>
-            <span>Molestiae ab eligendi magni facere illum quisquam ex placeat, expedita voluptatibus deserunt natus corporis vero fugit, dolore animi? Adipisci, pariatur voluptatibus fugit facilis fugiat odit, nobis itaque culpa quas vel!</span>
-            <span>Officia fuga odio ea nobis id voluptatem natus mollitia magnam amet, esse sapiente distinctio recusandae pariatur vitae earum dignissimos. Natus cumque, earum numquam perspiciatis vel doloremque ea eos, vero ad.</span>
-            <span>Aperiam quas sint accusamus at iusto qui porro veniam, vitae, debitis et harum deserunt enim ex dolores, cupiditate fuga. Enim adipisci recusandae minus optio, deleniti voluptatem ipsam ab quis perspiciatis.</span>
-            <span>Voluptate quibusdam molestias rerum in dignissimos atque fugit eius facilis amet nostrum, sed eveniet excepturi, facere similique modi, asperiores fugiat sit ex. Optio atque tempore, nostrum molestias officia rem totam.</span>
-            <span>Aut veritatis quo, tempore quasi ipsum illo accusantium quaerat explicabo aperiam unde laudantium ex, officia rem dicta, perspiciatis ratione vel minima inventore dolorem. Rerum veniam dicta alias ipsum, quidem esse.</span>
-            <span>Aliquam expedita ipsa nihil et suscipit ab debitis in ratione temporibus tempore doloremque voluptatibus quia quae eius optio, saepe dolorem pariatur laboriosam atque incidunt eaque est. Atque nulla repellendus fuga!</span>
-            <span>Dolor, nam voluptas rerum magni quas eveniet libero, laborum blanditiis voluptates impedit quae expedita, illo, suscipit consequuntur obcaecati mollitia odio necessitatibus veritatis iusto officia atque facilis officiis labore. Voluptas, ex.</span>
-            <span>Architecto sunt, numquam aperiam temporibus quas explicabo sequi suscipit. Quibusdam cupiditate assumenda fuga eum? Cum adipisci numquam iure dolor fugit ducimus et doloribus magnam, optio in, id deleniti tenetur eveniet?</span>
-            <span>Ipsam beatae rem eveniet doloribus, fugit at facere, animi. Ratione pariatur voluptatem nostrum aut repellendus possimus tempora, unde at corporis deleniti, culpa corrupti. Laborum officiis explicabo repudiandae animi ab, accusamus.</span>
-            <span>Cumque laboriosam vel magnam ipsam cupiditate veritatis, doloribus voluptas. Repudiandae consequuntur nobis, eligendi nostrum consectetur neque esse adipisci, sequi eveniet at est voluptatibus velit labore veritatis tempore asperiores alias corrupti.</span>
-            <span>Sunt eius deleniti laboriosam velit ipsam temporibus quibusdam tempore, dolorum repudiandae rerum, impedit amet? Sapiente quaerat neque commodi odit provident quasi necessitatibus voluptatem iure, ullam, labore unde eius sit dolorum.</span>
-            <span>Accusantium, quod officia non ratione natus laborum aspernatur est officiis hic rerum quis sequi deleniti voluptas explicabo ad. Cupiditate tempora dolores enim quos ducimus magnam ea hic aperiam officia vitae.</span>
-            <span>Impedit fugiat rem quos unde fuga molestias doloribus perferendis eum, culpa aperiam cupiditate laudantium sapiente nostrum veritatis magnam tenetur ipsam error placeat maxime eligendi facilis, sint quo. Facilis, dolore, sint?</span>
-            <span>Exercitationem blanditiis dolorum eligendi alias repudiandae obcaecati ex dolores ipsa, eum illum dolor minus libero, itaque voluptatibus, saepe asperiores veritatis odit placeat eos velit, odio recusandae. Nesciunt molestiae provident maiores.</span>
-            <span>Necessitatibus iure dolorem ut fuga alias accusantium. Culpa consectetur repellendus amet vel, inventore nam, iure quis labore nostrum laudantium aliquam ipsam earum numquam rem itaque repudiandae ut temporibus. Ipsa, deserunt!</span>
-            <span>Dicta perferendis inventore numquam consectetur, blanditiis nobis, cum odio vero corrupti error, magnam totam illo fugiat veritatis in nam. Recusandae sapiente itaque illo ducimus nostrum quod, ea necessitatibus molestiae voluptate.</span>
-            <span>Reiciendis delectus laudantium architecto cumque autem temporibus similique nobis numquam maxime praesentium quasi, blanditiis voluptates velit deserunt obcaecati sed nisi, est natus molestiae commodi quas nam! Autem quibusdam ex tempora.</span>
-            <span>Amet eius adipisci repellat commodi cumque repudiandae ut maxime recusandae officiis blanditiis. Nulla rem culpa ex labore, fuga quo eveniet, accusamus, necessitatibus sed officia assumenda ullam mollitia. Quia, temporibus, quis.</span>
-            <span>Nostrum rerum suscipit ex fugiat maiores incidunt et, officia omnis voluptatem in tempora aperiam quasi esse architecto, odit nisi! Veritatis a voluptate eum reprehenderit magni cum maiores hic molestiae aspernatur?</span>
-            <span>Laboriosam ipsum corrupti earum vel sunt, dicta libero, iure quidem, illum fugit sit veniam itaque odio molestiae eius obcaecati officiis accusantium. Dicta quisquam ut quibusdam saepe aut! Saepe, quasi odit?</span>
-            <span>Hic, nobis maiores voluptas mollitia similique nam, quas vel, natus voluptatibus obcaecati, veritatis reiciendis. Vero, doloremque, et. Totam corporis quidem temporibus corrupti nemo libero velit, neque at, incidunt dolores. Aliquid.</span>
-            <span>Incidunt nulla impedit consequatur quibusdam modi iusto sed provident eius nemo repellat veniam voluptas, repellendus quaerat necessitatibus ad rerum molestias soluta at, ratione iure quasi ducimus quae, aliquid omnis. Aspernatur!</span>
-            <span>Suscipit ipsum laboriosam impedit recusandae nam, aperiam consectetur facilis. Recusandae soluta, adipisci nisi obcaecati excepturi, necessitatibus porro quod autem cupiditate voluptate tempora praesentium, sunt ipsum ex repudiandae laborum. Optio, voluptates.</span>
-            <span>Quam minima autem alias odit quo consequatur, dolorum voluptate quis porro repudiandae beatae nisi ratione ad aliquam, labore illo atque debitis velit deserunt nemo quasi placeat accusamus mollitia ipsa. Ab?</span>
-            <span>Minus placeat culpa sit dignissimos illo deserunt, labore, facere aperiam, at ullam quam ipsam voluptatem obcaecati optio aut? Itaque harum distinctio adipisci debitis dolorem totam error sequi excepturi quisquam vitae.</span>
-            <span>Asperiores doloremque obcaecati et mollitia repudiandae perspiciatis nostrum odit neque ullam non vitae nulla fugiat id, rem nemo, fugit hic quis nihil. Commodi iste quaerat tenetur deserunt suscipit, velit ab.</span>
-            <span>Ipsum ipsa alias vitae voluptatum quisquam aut obcaecati, maiores recusandae, expedita, nobis sapiente. Magnam eveniet suscipit autem cupiditate, recusandae molestias, expedita laboriosam a at voluptates doloribus natus! Perspiciatis autem, esse.</span>
-            <span>Veritatis dolorem excepturi, nobis nisi, possimus optio, deleniti quidem velit libero, eius officia id quibusdam blanditiis odit! Ipsum praesentium eligendi necessitatibus mollitia delectus error, nemo. Saepe ipsum ex molestiae aspernatur!</span>
-            <span>Soluta laboriosam voluptatum, iste in fuga, cumque molestias eius porro est quas odit dolor itaque architecto. Aspernatur mollitia quos ab impedit. Eveniet eum culpa ratione quas vero necessitatibus asperiores animi.</span>
-            <span>Voluptates ipsum, vel iusto, alias magnam libero exercitationem itaque officiis sunt quae minus nobis eum rerum aperiam quaerat tempore veritatis et iste doloribus minima ullam expedita maiores! Sit, maxime, quae.</span>
-            <span>Nemo voluptas accusantium eveniet magni possimus illo veritatis facere deserunt aut molestiae distinctio ea, eius velit fuga, accusamus, enim ex. Esse, nobis tenetur illo reprehenderit sunt rerum quo impedit eaque!</span>
-            <span>Velit molestias quod asperiores consectetur accusantium autem. Eos, rerum error officiis nam obcaecati corrupti ullam soluta expedita quibusdam similique, fugit. Quasi inventore voluptatibus, ea ipsum illo sequi. Dolore, ducimus, odit.</span>
-            <span>Ea voluptates, non asperiores eligendi dolores explicabo, quo id laborum eum consequuntur nostrum quod dignissimos porro minus ipsum tempora quas, amet iste! Debitis alias quo, nobis in. Quam eligendi, obcaecati!</span>
-            <span>Iure a, neque nulla perspiciatis laboriosam architecto veniam nostrum velit deleniti praesentium minima excepturi iste porro corporis, obcaecati necessitatibus voluptatibus. Vitae totam voluptatibus cumque impedit aut sed, mollitia culpa vero.</span>
-            <span>Quisquam, explicabo. Pariatur officia harum repellat delectus quis quisquam cupiditate porro placeat, doloremque maiores ducimus magnam fugiat, expedita voluptates quae praesentium laborum excepturi consectetur. Esse ut saepe voluptatibus a qui.</span>
-            <span>Sit distinctio libero veniam quibusdam praesentium natus illo, quasi laborum hic iusto optio fugit officiis adipisci soluta! Sapiente tempora, rerum temporibus dolor beatae facere perspiciatis deleniti, corporis quo voluptas iure.</span>
-            <span>Nulla pariatur sunt ipsam fugit voluptas iure perferendis eius cumque voluptatibus recusandae officiis blanditiis autem ut molestiae aspernatur, provident nisi porro ipsum itaque, impedit odio voluptatum aut qui. Voluptatum, odit!</span>
-            <span>Illo saepe libero repellat rerum doloribus fugiat atque accusamus totam dolores ab. Facilis omnis aliquid officiis rem, ullam asperiores atque distinctio delectus consequatur excepturi praesentium doloribus pariatur dolorem, corporis magni.</span>
-            <span>Iure culpa minima aliquam debitis iusto molestias repudiandae voluptate voluptatem assumenda! Fuga, inventore esse aliquam voluptas, officia ut architecto modi. Repellendus animi ipsa blanditiis sequi accusantium, maxime saepe quae ipsum.</span></p>
+        <div class="mainCreate">
+            <div class="createDiv">
+               <h1>Create</h1>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
+            </div>
+            <div>
+                <img src="images/create.jpg" alt="Create">
+            </div>
+
+        </div>
     </main>
     <footer class="footer">&copy; Lambda 2019</footer>
     <script src="index.js"></script>
