--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
 
 </head>
 
@@ -21,6 +22,7 @@
                 <a href="#" class="btn btn-rounded">Sign In</a>
             </div>
         </div>
+        <div class="menuItems"><a href="about.html">About</a></div>
         <div class="homeHeader-middle">
             By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
         </div>
