Added menu integration

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
                 <a href="#" class="btn btn-rounded">Sign In</a>
             </div>
         </div>
-        <div class="menuItems"><a href="about.html">About</a></div>
+        <div class="menuItems">
+        <a href="about.html">About</a>
+        <a href="about.html">PlaceHolder</a>
+        <a href="about.html">PlaceHolder</a>
+        </div>
         <div class="homeHeader-middle">
             By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
         </div>
