Styled Create Div

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="createDiv">
                <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
+                <a href="#" class="btn btn-rounded" id="cSeeMore">See More</a>
             </div>
             <div>
                 <img src="images/create.jpg" alt="Create">
