--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/e3f3a3c9ed.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico" />
 
 </head>
 
@@ -21,6 +22,11 @@
                 <a href="#" class="btn btn-rounded">Sign In</a>
             </div>
         </div>
+        <div class="menuItems">
+            <a href="about.html">About</a>
+            <a href="about.html">PlaceHolder</a>
+            <a href="about.html">PlaceHolder</a>
+        </div>
         <div class="homeHeader-middle">
             By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
         </div>
@@ -31,8 +37,9 @@
     <main class="mainContent">
         <div class="mainCreate">
             <div class="createDiv">
-               <h1>Create</h1>
+                <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
+                <a href="#" class="btn btn-rounded" id="cSeeMore">See More</a>
             </div>
             <div>
                 <img src="images/create.jpg" alt="Create">
@@ -40,6 +47,8 @@
 
         </div>
     </main>
-    <footer class="footer">&copy; Lambda 2019</footer>
+    <footer class="footer">
+        <p>&copy; Lambda 2019</p>
+    </footer>
     <script src="index.js"></script>
 </body></html>
