Added rate div and smooth scrolling to rate div

--- a/index.html
+++ b/index.html
@@ -59,10 +59,20 @@
             <div class="shareDiv">
                 <h1>Share</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="fSeeMore">See More</div>
+                <div class="btn btn-rounded" id="sSeeMore">See More</div>
             </div>
             <div>
                 <img src="images/share.jpg" alt="Find">
+            </div>
+        </div>
+        <div class="mainRate">
+            <div class="rateDiv">
+                <h1>Rate</h1>
+                <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
+                <div class="btn btn-rounded" id="rSeeMore">See More</div>
+            </div>
+            <div>
+                <img src="images/rate.jpg" alt="Find">
             </div>
         </div>
     </main>
