Added Back to the Top button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.ico" />
-
 </head>
 
 <body>
@@ -69,7 +68,7 @@
             <div class="rateDiv">
                 <h1>Rate</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="rSeeMore">See More</div>
+                <div class="btn btn-rounded" id="rSeeMore">Back to Top</div>
             </div>
             <div>
                 <img src="images/rate.jpg" alt="Find">
@@ -80,4 +79,6 @@
         <p>&copy; Lambda 2019</p>
     </footer>
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
