Replaced hidef images with svg images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="btn btn-rounded" id="cSeeMore">See More</div>
             </div>
             <div>
-                <img src="images/create.jpg" alt="Create">
+                <img src="images/create.svg" alt="Create">
             </div>
         </div>
         <div class="mainFind">
@@ -51,7 +51,7 @@
                 <div class="btn btn-rounded" id="fSeeMore">See More</div>
             </div>
             <div>
-                <img src="images/find.jpg" alt="Find">
+                <img src="images/find.svg" alt="Find">
             </div>
         </div>
         <div class="mainShare">
@@ -61,7 +61,7 @@
                 <div class="btn btn-rounded" id="sSeeMore">See More</div>
             </div>
             <div>
-                <img src="images/share.jpg" alt="Find">
+                <img src="images/share.svg" alt="Share">
             </div>
         </div>
         <div class="mainRate">
@@ -71,7 +71,7 @@
                 <div class="btn btn-rounded" id="rSeeMore">Back to Top</div>
             </div>
             <div>
-                <img src="images/rate.jpg" alt="Find">
+                <img src="images/rate.svg" alt="Rate">
             </div>
         </div>
     </main>
@@ -79,6 +79,4 @@
         <p>&copy; Lambda 2019</p>
     </footer>
     <script src="index.js"></script>
-</body>
-
-</html>
+</body></html>
