Added links for menu and sign in

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <i class="fab fa-elementor" id="menu"></i>
             <img src="images/logo.png" alt="Logo" class="homeLogo">
             <div>
-                <a href="#" class="btn btn-rounded">Sign In</a>
+                <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign In</a>
             </div>
         </div>
         <div class="menuItems">
+            <a href="https://tender-lamarr-7c3eda.netlify.com/">Start Here</a>
             <a href="about.html">About</a>
-            <a href="about.html">PlaceHolder</a>
-            <a href="about.html">PlaceHolder</a>
+            <a href="#">PlaceHolder</a>
         </div>
         <div class="homeHeader-middle">
             By alleviating the pain of lacking knowledge, we will give every individual on the planet the assets to learn how to do anything.
