--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
-<body>
+<body class="b2">
     <header class="homeHeader">
         <div class="homeHeader-top">
             <i class="fab fa-elementor" id="menu"></i>
             <img src="images/logo.png" alt="Logo" class="homeLogo">
             <div>
-                <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign In</a>
+                <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded">Sign Up/Sign In</a>
             </div>
         </div>
         <div class="menuItems">
@@ -31,6 +31,7 @@
         </div>
         <div class="homeHeader-bottom">
             <img src="images/book.png" alt="Learn More" id="learnMore">
+            <h1>CLICK ME</h1>
         </div>
     </header>
     <main class="mainContent">
