Changed footer theme and added links to footer

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     </main>
     <footer class="footer">
         <p>&copy; Lambda 2019</p>
+        <div class="fLinks">
+            <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
+            <a href="about.html">About</a>
+            <a href="#">Back to the Top</a></div>
     </footer>
     <script src="index.js"></script>
 </body></html>
