Styled Footer Page

--- a/about.html
+++ b/about.html
@@ -9,67 +9,80 @@
     <title>About</title>
 </head>
 
-<body>
+<body class="aBody">
+    <img src="images/bigLogo.png" alt="Logo" class="bigLogo">
+    <main class="aboutContainer">
+        <main class="container">
+            <div class="marketing">
+                <h2>Marketing</h2>
+                <div class="people">
+                    <h3>Isaiah Francois</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
+                            <p>Isaiah Francois contributed to.</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
 
-    <div class="header">
-        <h1 class="aboutT">About</h1><img src="images/logo.png" alt="How To Logo">
-    </div>
-    <main class="container">
-        <div class="marketing">
-            <h2>Marketing</h2>
-            <div class="people">
-                <h3>Isaiah Francois</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquam perspiciatis a pariatur consectetur commodi odit dolorum eos voluptas labore dolores quos sunt similique, iusto odio cupiditate animi! Iste, inventore.</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
                 </div>
+                <div class="people">
+                    <h3>Levi Thomas</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/levi.png" alt="Isaiah Francois" class="pImages">
+                            <p>Levi Thomas contributed to</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
 
-            </div>
-            <div class="people">
-                <h3>Levi Thomas</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae similique maxime magnam, sed a delectus distinctio eaque repudiandae molestiae molestias recusandae, quis quidem voluptatibus esse debitis dolorem ea ullam earum?</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
                 </div>
-
-            </div>
-            <div class="people">
-                <h3>Dennis Mercado</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor animi, sapiente velit voluptatibus autem, iure minima, expedita facilis, explicabo id perspiciatis? Fugit dicta saepe dolores doloribus earum iure vel suscipit!</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                <div class="people">
+                    <h3>Dennis Mercado</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
+                            <p>Dennis Mercado contributed to</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
                 </div>
-
             </div>
-        </div>
 
-        <div class="appDevelopment">
-            <h2>App Development</h2>
-            <div class="people">
-                <h3>Leland Rogers</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet accusamus, rem! Maiores perspiciatis tenetur nesciunt quisquam praesentium quis quaerat distinctio culpa quas, officia incidunt veniam et fugiat natus laboriosam architecto!</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+            <div class="appDevelopment">
+                <h2>App Development</h2>
+                <div class="people">
+                    <h3>Leland Rogers</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/leland.png" alt="Isaiah Francois" class="pImages">
+                            <p>Leland Rogers contributed to</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
                 </div>
-
-            </div>
-            <div class="people">
-                <h3>Jarred Stanford</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam fuga mollitia est, ducimus repellendus repudiandae commodi tempore. Rerum consectetur, sed porro eveniet placeat consequatur aliquam. Eveniet facilis nihil quae adipisci?</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                <div class="people">
+                    <h3>Jarred Stanford</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
+                            <p>Jarred Stanford contributed to</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
                 </div>
-
-            </div>
-            <div class="people">
-                <h3>Andy Bettisworth</h3>
-                <div class="holder">
-                    <div class="contribution">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, quos placeat tenetur saepe vero! Reiciendis quasi perferendis sit! Dolorem iure recusandae, fugiat blanditiis rem nobis rerum magni incidunt sit id!</div>
-                    <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                <div class="people">
+                    <h3>Andy Bettisworth</h3>
+                    <div class="holder">
+                        <div class="contribution"><img src="images/andy.png" alt="Isaiah Francois" class="pImages">
+                            <p>Andy Bettisworth contributed to</p>
+                        </div>
+                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                    </div>
                 </div>
-
             </div>
-        </div>
-
+        </main>
     </main>
+        <footer>
+        <p>&copy; Lambda 2019</p>
+        <div class="fLinks">
+            <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
+            <a href="index.html">Home</a>
+            <a href="#">Back to the Top</a></div>
+    </footer>
 </body></html>
