Added links to each github icon directing to every contributos github

--- a/about.html
+++ b/about.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>About</title>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
 <body class="aBody">
-    <img src="images/bigLogo.png" alt="Logo" class="bigLogo">
+    <div class="aboutMenu">
+        <img src="images/logo.png" alt="Logo" class="bigLogo">
+        <a href="https://tender-lamarr-7c3eda.netlify.com/" class="btn btn-rounded aS">Sign Up/Sign In</a>
+    </div>
     <main class="aboutContainer">
         <main class="container">
             <div class="marketing">
@@ -21,9 +26,8 @@
                         <div class="contribution"><img src="images/isaiah.png" alt="Isaiah Francois" class="pImages">
                             <p>Isaiah Francois contributed to.</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/FrancoisCoding"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
-
                 </div>
                 <div class="people">
                     <h3>Levi Thomas</h3>
@@ -31,7 +35,7 @@
                         <div class="contribution"><img src="images/levi.png" alt="Isaiah Francois" class="pImages">
                             <p>Levi Thomas contributed to</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/TheLessonHere"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
 
                 </div>
@@ -41,7 +45,7 @@
                         <div class="contribution"><img src="images/dennis.png" alt="Isaiah Francois" class="pImages">
                             <p>Dennis Mercado contributed to</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/denmercs"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
                 </div>
             </div>
@@ -54,7 +58,7 @@
                         <div class="contribution"><img src="images/leland.png" alt="Isaiah Francois" class="pImages">
                             <p>Leland Rogers contributed to</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/ltrii"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
                 </div>
                 <div class="people">
@@ -63,7 +67,7 @@
                         <div class="contribution"><img src="images/jerred.png" alt="Isaiah Francois" class="pImages">
                             <p>Jarred Stanford contributed to</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/JarredStanford"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
                 </div>
                 <div class="people">
@@ -72,17 +76,19 @@
                         <div class="contribution"><img src="images/andy.png" alt="Isaiah Francois" class="pImages">
                             <p>Andy Bettisworth contributed to</p>
                         </div>
-                        <div><img src="images/GitHub-Mark-32px.png" alt="Github Link"></div>
+                        <div><a href="https://github.com/wurde"><img src="images/GitHub-Mark-32px.png" alt="Github Link"></a></div>
                     </div>
                 </div>
             </div>
+            <footer>
+                <p>&copy; Lambda 2019</p>
+                <div class="fLinks">
+                    <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
+                    <a href="index.html">Home</a>
+                    <a href="#">Back to the Top</a></div>
+            </footer>
         </main>
     </main>
-        <footer>
-        <p>&copy; Lambda 2019</p>
-        <div class="fLinks">
-            <a href="https://tender-lamarr-7c3eda.netlify.com/">Login</a>
-            <a href="index.html">Home</a>
-            <a href="#">Back to the Top</a></div>
-    </footer>
-</body></html>
+</body>
+
+</html>
