--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="homeHeader-bottom">
             <img src="images/book.png" alt="Learn More" id="learnMore">
-            <h1>CLICK ME</h1>
+            <h1>Click to Learn More</h1>
         </div>
     </header>
     <main class="mainContent">
@@ -39,7 +39,7 @@
             <div class="createDiv">
                 <h1>Create</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="cSeeMore">See More</div>
+                <div class="btn btn-rounded" id="cSeeMore">Next Feature</div>
             </div>
             <div>
                 <img src="images/create.svg" alt="Create">
@@ -49,7 +49,7 @@
             <div class="findDiv">
                 <h1>Find</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="fSeeMore">See More</div>
+                <div class="btn btn-rounded" id="fSeeMore">Next Feature</div>
             </div>
             <div>
                 <img src="images/find.svg" alt="Find">
@@ -59,7 +59,7 @@
             <div class="shareDiv">
                 <h1>Share</h1>
                 <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ab nam nulla quasi, magnam incidunt facilis vitae officia, cumque accusamus quod quos odio earum consequatur illum omnis et quae delectus.</span><span>Ducimus, aperiam, laborum? Veritatis consectetur quibusdam illo ipsam amet excepturi, perferendis, expedita? Dignissimos debitis dolorem quasi, ipsam et dolor soluta eligendi inventore laborum! Error alias saepe, eos voluptates officia laudantium.</span></p>
-                <div class="btn btn-rounded" id="sSeeMore">See More</div>
+                <div class="btn btn-rounded" id="sSeeMore">Next Feature</div>
             </div>
             <div>
                 <img src="images/share.svg" alt="Share">
